# Cycl

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  mise.toml
.github/workflows/: ci.yml
assets/: styles.css
docs/: roadmap.md
docs/handson/: 00-overview.md  01-setup.md  02-data-layer.md  03-todo-ui.md  04-timer.md  05-integration.md  06-tray.md  07-distribution.md
shared/: Cargo.toml
shared/src/: lib.rs  timer.rs  todo.rs
src/: app.rs  main.rs  tauri_api.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: timer.rs  todo.rs
src-tauri/src/db/: migrations.rs  mod.rs  session_queries.rs  todo_queries.rs
src-tauri/src/models/: session.rs  todo.rs
src-tauri/src/timer/: engine.rs
src/components/: mod.rs  pomodoro_timer.rs  todo_form.rs  todo_item.rs  todo_list.rs
src/hooks/: mod.rs  use_timer.rs  use_todos.rs
