[package]
name = "cycl-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "=0.6.3", features = ["web"] }
dioxus-logger = "=0.6.2"
wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "=0.4.76"
web-sys = "=0.3.103"
js-sys = "=0.3.103"
serde = { version = "=1.0.228", features = ["derive"] }
serde-wasm-bindgen = "=0.6.5"
shared = { path = "shared"}

[workspace]
members = ["src-tauri", "shared"]

[workspace.lints.rust]
dead_code = "allow"

[lints]
workspace = true

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
