[package]
name = "cycl"
version = "0.1.0"
description = "A Tauri App"
authors = ["k"]
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cycl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = ["tray-icon"] }
tauri-plugin-opener = "=2.5.4"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
shared = { path = "../shared" }
rusqlite = {version = "=0.31.0", features = ["bundled"] }
thiserror = "=1.0.69"
tokio = { version = "1", features = ["time"] }
chrono = { version = "0.4", features = ["clock"] }
tauri-plugin-notification = "2"
